--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav>
         <div class="nav-content">
             <!-- TASK 1: Change "My Portfolio" to your name or any title you want -->
-            <h2>My Portfolio</h2>
+            <h2>nihga</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
